[gd_scene load_steps=4 format=3 uid="uid://c71ggjc16i0lx"]

[ext_resource type="Texture2D" uid="uid://bx8dgila3dyxe" path="res://assets/resumebutton.jpg" id="1_kjk2d"]
[ext_resource type="Script" path="res://scenes/PauseMenu.gd" id="1_sqbpd"]
[ext_resource type="Texture2D" uid="uid://dy0fihag0obyq" path="res://assets/settingsbutton.jpg" id="2_bhlkl"]

[node name="PauseMenu" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
scale = Vector2(1, 1.0073)
theme_override_constants/separation = 50
script = ExtResource( "1_sqbpd" )

[node name="ResumeButton" type="TextureButton" parent="."]
offset_right = 1156.0
offset_bottom = 1156.0
texture_normal = ExtResource( "1_kjk2d" )

[node name="SettingsButton" type="TextureButton" parent="."]
offset_top = 1206.0
offset_right = 1156.0
offset_bottom = 2351.0
texture_normal = ExtResource( "2_bhlkl" )

[connection signal="mouse_entered" from="ResumeButton" to="." method="_on_resume_button_mouse_entered"]
[connection signal="mouse_exited" from="ResumeButton" to="." method="_on_resume_button_mouse_exited"]
[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="mouse_entered" from="SettingsButton" to="." method="_on_settings_button_mouse_entered"]
[connection signal="mouse_exited" from="SettingsButton" to="." method="_on_settings_button_mouse_exited"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
